Date	Added
12/28
	* Fix double timer_delete caused by pc_alive_timer (SVN 848)
	  [MouseJstr]
	* Fixed typo in npcs_athena.conf (mc_cameri verses mc_Cameri),
	  thanks Mellow972 for pointing that out (SVN 845) [MouseJstr]
        * Reduced weapon breaking chance for Overthrust, thanks Draco - i almost
          forgot to add this update [celest]
	* added checks into the skill code to prevent proxy's/bots
	  from crashing the server by using skillid's that
	  are WAY out of range (SVN 841) [MouseJstr]
	* Fixed clif.c errors that prevent old clients from being used. [nsstrunks]
	* Fixed @jobchange to not default to upper (SVN 837) [MouseJstr]
	* Fixed a compile error in @mobsearch (SVN 836) [MouseJstr]
12/27
        * Updated 1206's packet fuctions in clif.c [celest]
        * Updated the new guild skills - cannot be reused within 5 minutes of 
          activating it [celest]
        * Added @mobsearch, @cleanmap and @giveitem from jA [celest]
	* Fixed the guild issues (SVN 832) [MouseJstr]
        * Updated description for player_check_cloak_type [celest]
        * Increased skill range limitations in pc_no_footset [celest]
        * Added exp_calc_type - to alternate between 3 different versions for exp
          calculating [celest]
	* Reinitialized variable 'c' in map_readmap, it's supposed to have a start value. Ex. '-'. [MC Cameri]
	* Commented out dump_timer_heap() again... [MC Cameri]
	* Added include of string.h in malloc.c, was causing compile errors/warnings [MC Cameri]
	* Modified the map progress bar to reduce updates (SVN 829) [MouseJstr]
        * Updated map cache system from jA 1087 - change read_map_from_bitmap to 2 to
          enable zlib compression [celest]
	* don't delete alive_timers of -1  (SVN 823) [MouseJstr]
	* switched malloc,calloc,realloc to aMalloc, aCalloc, aRealloc
	  so support the use of a garbage collector (SVN 821) [MouseJstr]
	* Removed some printf's from map-sql [MC Cameri]